website/versioned_docs/version-0.5.0/cli-reference/gitops_get_cluster.md
## gitops get cluster

Display one or many CAPI clusters

```
gitops get cluster [flags]
```

### Examples

```

# Get all CAPI clusters
gitops get clusters

# Get a single CAPI cluster
gitops get cluster <cluster-name>

# Get the Kubeconfig of a cluster
gitops get cluster <cluster-name> --kubeconfig
```

### Options

```
  -h, --help         help for cluster
      --kubeconfig   Returns the Kubeconfig of the workload cluster
```

### Options inherited from parent commands

```
  -e, --endpoint string    The Weave GitOps Enterprise HTTP API endpoint
      --namespace string   The namespace scope for this operation (default "wego-system")
  -v, --verbose            Enable verbose output
```

### SEE ALSO

* [gitops get](gitops_get.md)	 - Display one or many Weave GitOps resources

###### Auto generated by spf13/cobra on 2-Dec-2021
